--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,9 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap');
 
-*{
+* {
     font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
 }
 
-h1{
-    color: red;
+body {
+    background-color: #f6f8fc;
+}
+
+.content {
+    width: 100vw;
+    height: 100vh;
+    padding: 1rem;
+    background-color: #fff;
+}
+
+@media screen and (min-width: 992px) {
+    .content {
+        max-width: 992px;
+        margin: 1rem auto;
+        height: auto;
+        border-radius: 1rem;
+    }
 }
