:lipstick: feat: styling the types

--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -5,13 +5,63 @@
     margin: 0;
     padding: 0;
 }
+.grass{
+    background-color: #78c850;
+}
+.fire{
+    background-color: #f08030;
+}
+.water{
+    background-color: #6890f0;
+}
+.bug{
+    background-color: #a8b820;
+}
+.normal{
+    background-color: #a8a878;
+}
+.poison{
+    background-color: #a040a0;
+}
+.electric{
+    background-color: #f8d030;
+}
+.ground{
+    background-color: #e0c068;
+}
+.fairy{
+    background-color: #ee99ac;
+}
+.fighting{
+    background-color: #c03028;
+}
+.psychic{
+    background-color: #f85888;
+}
+.rock{
+    background-color: #b8a038;
+}
+.ghost{
+    background-color: #705898;
+}
+.ice{
+    background-color: #98d8d8;
+}
+.dragon{
+    background-color: #7038f8;
+}
+.dark{
+    background-color: #725847;
+}
+.flying{
+    background-color: #a98ff0;
+}
 
 .pokemon {
     display: flex;
     flex-direction: column;
     margin: .5rem;
     padding: 1rem;
-    background-color: #49d0b0;
     border-radius: 1rem;
 }
 
@@ -25,6 +75,7 @@
 .pokemon .name {
     color: #fff;
     margin-bottom: .25rem;
+    text-transform: capitalize;
 }
 
 .pokemon .detail {
@@ -41,12 +92,13 @@
 }
 
 .pokemon .detail .types .type {
-    background-color: #61e1ca;
     color: #fff;
     padding: .25rem .5rem;
     margin: .25rem 0;
     font-size: .625rem;
     border-radius: 1rem;
+    filter: brightness(1.1);
+    text-align: center;
 }
 
 .pokemon .detail img {
