--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -5,55 +5,72 @@
     margin: 0;
     padding: 0;
 }
-.grass{
+
+.grass {
     background-color: #78c850;
 }
-.fire{
+
+.fire {
     background-color: #f08030;
 }
-.water{
+
+.water {
     background-color: #6890f0;
 }
-.bug{
+
+.bug {
     background-color: #a8b820;
 }
-.normal{
+
+.normal {
     background-color: #a8a878;
 }
-.poison{
+
+.poison {
     background-color: #a040a0;
 }
-.electric{
+
+.electric {
     background-color: #f8d030;
 }
-.ground{
+
+.ground {
     background-color: #e0c068;
 }
-.fairy{
+
+.fairy {
     background-color: #ee99ac;
 }
-.fighting{
+
+.fighting {
     background-color: #c03028;
 }
-.psychic{
+
+.psychic {
     background-color: #f85888;
 }
-.rock{
+
+.rock {
     background-color: #b8a038;
 }
-.ghost{
+
+.ghost {
     background-color: #705898;
 }
-.ice{
+
+.ice {
     background-color: #98d8d8;
 }
-.dragon{
+
+.dragon {
     background-color: #7038f8;
 }
-.dark{
+
+.dark {
     background-color: #725847;
 }
-.flying{
+
+.flying {
     background-color: #a98ff0;
 }
 
@@ -104,6 +121,25 @@
 .pokemon .detail img {
     max-width: 100%;
     height: 66px;
+}
+
+.pagination {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 1rem;
+}
+
+.pagination button {
+    color: #fff;
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    background-color: #6c79db;
+    border: none;
+    border-radius: 1rem;
 }
 
 @media screen and (min-width: 380px) {
